--- a/curriculo/package.json
+++ b/curriculo/package.json
@@ -15,6 +15,8 @@
     "@mui/material": "^5.16.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
+    "react-material-ui-carousel": "^3.4.2",
     "typeface-nunito-sans": "^1.1.13",
     "typeface-poppins": "^1.1.13"
   },
